--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-spring.datasource.url=jdbc::mysql://localhost/vollmed_api
-spring.datasource.username=root
-spring.datasource.password=280705
-
+spring.profiles.active=h2
+spring.jpa.show-sql=true
