--- a/api/pom.xml
+++ b/api/pom.xml
@@ -65,12 +65,20 @@
       		<groupId>org.flywaydb</groupId>
      		<artifactId>flyway-core</artifactId>
    		</dependency>
-    <dependency>
-      <groupId>org.flywaydb</groupId>
-      <artifactId>flyway-mysql</artifactId>
-    </dependency>
-
-	</dependencies>
+		<dependency>
+		<groupId>org.flywaydb</groupId>
+		<artifactId>flyway-mysql</artifactId>
+		</dependency>
+		<dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-security</artifactId>
+    	</dependency>
+		<dependency>
+      		<groupId>org.springframework.security</groupId>
+      		<artifactId>spring-security-test</artifactId>
+      		<scope>test</scope>
+    	</dependency>
+	</dependencies>	
 
 	<build>
 		<plugins>
